--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -13,10 +13,10 @@
 #  url = "#posts"
 #  weight = 20
 
-#[[main]]
-#  name = "Portafolio"
-#  url = "#projects"
-#  weight = 30
+[[main]]
+  name = "Portafolio"
+  url = "#projects"
+  weight = 30
 
 # [[main]]
 #  name = "Publications"
